[master] tracks shuffle
