# pkg/zpotify_api/zpotify_api.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.8
+// 	protoc-gen-go v1.36.9
 // 	protoc        v5.28.3
 // source: zpotify_api.proto
 
@@ -817,6 +817,7 @@ func (x *Refresh_Response) GetAuthData() *Auth_AuthData {
 type ListSongs_Request struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	Paging        *Paging                `protobuf:"bytes,1,opt,name=paging,proto3" json:"paging,omitempty"`
+	RandomHash    *uint64                `protobuf:"varint,2,opt,name=random_hash,json=randomHash,proto3,oneof" json:"random_hash,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -856,6 +857,13 @@ func (x *ListSongs_Request) GetPaging() *Paging {
 		return x.Paging
 	}
 	return nil
+}
+
+func (x *ListSongs_Request) GetRandomHash() uint64 {
+	if x != nil && x.RandomHash != nil {
+		return *x.RandomHash
+	}
+	return 0
 }
 
 type ListSongs_Response struct {
@@ -946,10 +954,13 @@ const file_zpotify_api_proto_rawDesc = "" +
 	"\aRequest\x12#\n" +
 	"\rrefresh_token\x18\x01 \x01(\tR\frefreshToken\x1aC\n" +
 	"\bResponse\x127\n" +
-	"\tauth_data\x18\x01 \x01(\v2\x1a.zpotify_api.Auth.AuthDataR\bauthData\"\x92\x01\n" +
-	"\tListSongs\x1a6\n" +
+	"\tauth_data\x18\x01 \x01(\v2\x1a.zpotify_api.Auth.AuthDataR\bauthData\"\xc8\x01\n" +
+	"\tListSongs\x1al\n" +
 	"\aRequest\x12+\n" +
-	"\x06paging\x18\x01 \x01(\v2\x13.zpotify_api.PagingR\x06paging\x1aM\n" +
+	"\x06paging\x18\x01 \x01(\v2\x13.zpotify_api.PagingR\x06paging\x12$\n" +
+	"\vrandom_hash\x18\x02 \x01(\x04H\x00R\n" +
+	"randomHash\x88\x01\x01B\x0e\n" +
+	"\f_random_hash\x1aM\n" +
 	"\bResponse\x12+\n" +
 	"\x05songs\x18\x01 \x03(\v2\x15.zpotify_api.SongBaseR\x05songs\x12\x14\n" +
 	"\x05total\x18\x02 \x01(\x04R\x05total2\xcf\x01\n" +
@@ -1037,6 +1048,7 @@ func file_zpotify_api_proto_init() {
 		(*Auth_Response_AuthUuid)(nil),
 		(*Auth_Response_AuthData)(nil),
 	}
+	file_zpotify_api_proto_msgTypes[18].OneofWrappers = []any{}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
